err/pygster.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygster'...
Listing './lib/python3.5/site-packages/pygster/parsers'...
Compiling './lib/python3.5/site-packages/pygster/parsers/ECGateway.py'...
***   File "./lib/python3.5/site-packages/pygster/parsers/ECGateway.py", line 50
    raise PygsterParsingException, "Could not parse line"
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygster/parsers/ErrorLogPygster.py'...
***   File "./lib/python3.5/site-packages/pygster/parsers/ErrorLogPygster.py", line 55
    raise PygsterParsingException, "regmatch failed to match"
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygster/parsers/Log4jPygster.py'...
***   File "./lib/python3.5/site-packages/pygster/parsers/Log4jPygster.py", line 80
    raise PygsterParsingException, "regmatch failed to match"
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygster/parsers/PostfixPygster.py'...
***   File "./lib/python3.5/site-packages/pygster/parsers/PostfixPygster.py", line 61
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygster/parsers/SamplePygster.py'...
***   File "./lib/python3.5/site-packages/pygster/parsers/SamplePygster.py", line 72
    raise PygsterParsingException, "regmatch failed to match"
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygster/parsers/SquidPygster.py'...
***   File "./lib/python3.5/site-packages/pygster/parsers/SquidPygster.py", line 89
    raise PygsterParsingException, "regmatch failed to match"
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygster-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pygtail'...
Listing './lib/python3.5/site-packages/pygtail-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
